--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
         android:label="@string/app_name"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".mvp.ui.MainActivity" android:theme="@style/AppTheme.NoActionBar">
+        <activity android:name=".mvp.ui.activity.MainActivity" android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -16,7 +16,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".mvp.ui.base.ToolbarActivity" android:theme="@style/AppTheme.NoActionBar"/>
-        <activity android:name=".mvp.ui.TestActivity" android:theme="@style/AppTheme.NoActionBar"/>
+        <activity android:name=".mvp.ui.activity.TestActivity" android:theme="@style/AppTheme.NoActionBar"/>
     </application>
 
 </manifest>
